#3.7 Prisma Client 개발

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec babel-node server",
+    "migrate": "npx prisma migrate dev --preview-feature"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,17 @@
   "bugs": {
     "url": "https://github.com/worean/instaclone-backend/issues"
   },
-  "homepage": "https://github.com/worean/instaclone-backend#readme"
+  "homepage": "https://github.com/worean/instaclone-backend#readme",
+  "dependencies": {
+    "@prisma/client": "2.16.1",
+    "apollo-server": "2.19.2",
+    "graphql": "15.5.0"
+  },
+  "type": "module",
+  "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/node": "7.12.16",
+    "@babel/preset-env": "7.12.13",
+    "prisma": "2.16.1"
+  }
 }
