--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@prisma/client": "2.16.1",
     "apollo-server": "2.19.2",
-    "graphql": "15.5.0"
+    "graphql": "15.5.0",
+    "graphql-tools": "7.0.3"
   },
   "type": "module",
   "devDependencies": {
