--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "nodemon --exec babel-node server",
-    "migrate": "npx prisma migrate dev --preview-feature"
+    "migrate": "npx prisma migrate dev --preview-feature",
+    "studio": "npx prisma studio"
   },
   "repository": {
     "type": "git",
@@ -18,12 +19,14 @@
   },
   "homepage": "https://github.com/worean/instaclone-backend#readme",
   "dependencies": {
+    "@apollographql/graphql-upload-8-fork": "8.1.3",
     "@prisma/client": "2.16.1",
     "apollo-server": "2.19.2",
+    "bcrypt": "5.0.1",
+    "dotenv": "8.2.0",
     "graphql": "15.5.0",
     "graphql-tools": "7.0.3"
   },
-  "type": "module",
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/node": "7.12.16",
