--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@apollographql/graphql-upload-8-fork": "8.1.3",
     "@prisma/client": "2.16.1",
     "apollo-server": "2.19.2",
+    "apollo-server-express": "2.19.2",
     "bcrypt": "5.0.1",
     "dotenv": "8.2.0",
+    "express": "4.17.1",
     "graphql": "15.5.0",
     "graphql-tools": "7.0.3",
-    "jsonwebtoken": "8.5.1"
+    "jsonwebtoken": "8.5.1",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
