--- a/.gitignore
+++ b/.gitignore
@@ -114,5 +114,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Configuration for Private
 uploads/*
 prisma/migrations/*
+package-lock.json
